<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sober Monitor</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_select">Pick An Option</string>
    <string name="h2">The only fair way to choose who should have to stay sober.</string>
    <string name="bl1">Select</string>
    <string name="bl2">Event</string>
    <string name="bl3">Previous</string>
    <string name="bs1">Select From Created List</string>
    <string name="bs2">Select Random Number</string>
    <string name="bs3">Import Excel Spreadsheet</string>
    <string name="hs1">How are the sober monitors to be chosen?</string>
    <string name="title_activity_info">Information</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_select_list">SelectListActivity</string>
    <string name="title_activity_select_random">Select Random Number</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="select">Select</string>

    <string name="title_list">The List</string>

    <string name="dummyname">John Smith</string>
    <string name="dummymult">x4</string>

    <string name="list_select_title">List Select:</string>
    <string name="list_select">The list select feature allows the user to input individuals and select a frequency. The higher the frequency, the higher the change of being selected.</string>
    <string name="random_number_title">Random Number:</string>
    <string name="random_number">The random number feature allows the user to choose a sober monitor based on an algorithm that selects a random integer within the chosen range. Each person is assigned a number, and if their value matches what appears they are the sober monitor!</string>
    <string name="excel_import_title">Import Excel:</string>
    <string name="excel_import">Users are prompted to import pre-made excel files in order to quickly assign sober monitors. For information on proper formatting, please visit: www.cyberplays.com</string>

    <string name="number">0</string>
    <string name="range">RANGE</string>
    <string name="numbersel">SELECT</string>
    <string name="dialog_getrange_header">Enter Range for Selection</string>

    <string name="dialog_addperson_header">Add a person</string>
    <string name="dialog_addperson_name">NAME:</string>
    <string name="dialog_addperson_mult">MULT:</string>

</resources>
