<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="0dp"
    android:textDirection="anyRtl"
    android:background="#ff989898">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/list_select_title"
        android:id="@+id/ih1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/it1"
        android:gravity="center"
        android:background="#33CCFF"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:elegantTextHeight="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/list_select"
        android:paddingTop="10dp"
        android:id="@+id/it1"
        android:layout_below="@+id/ih1"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="false"
        android:background="#ff989898"
        android:textColor="#ffffff"
        android:textStyle="italic"
        android:paddingEnd="0dp"
        android:paddingBottom="10dp"
        android:layout_alignParentTop="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/random_number_title"
        android:id="@+id/ih2"
        android:layout_below="@+id/it1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:background="#33CCFF"
        android:textColor="#ffffffff"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/random_number"
        android:id="@+id/it2"
        android:layout_below="@+id/ih2"
        android:layout_alignEnd="@+id/it1"
        android:paddingTop="10dp"
        android:background="#ff989898"
        android:textColor="#ffffff"
        android:textStyle="italic"
        android:paddingEnd="0dp"
        android:paddingBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/excel_import_title"
        android:id="@+id/ih3"
        android:layout_below="@+id/it2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:layout_alignEnd="@+id/it3"
        android:gravity="center"
        android:background="#33CCFF"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/excel_import"
        android:id="@+id/it3"
        android:layout_below="@+id/ih3"
        android:layout_alignEnd="@+id/it2"
        android:paddingTop="10dp"
        android:background="#ff989898"
        android:textColor="#ffffff"
        android:linksClickable="true"
        android:textStyle="italic"
        android:paddingEnd="10dp" />
</RelativeLayout>