<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/hint_foreground_material_dark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/h1"
        android:textSize="60sp"
        android:layout_marginTop="36dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/h2"
        android:id="@+id/h2"
        android:elegantTextHeight="false"
        android:singleLine="false"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_below="@+id/h1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <at.markushi.ui.CircleButton
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:src="@drawable/ic_action"
        app:cb_color="#33CCFF"
        app:cb_pressedRingWidth="8dip"
        android:id="@+id/b1"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="97dp"
        android:layout_above="@+id/cyberplays"
        android:layout_alignParentStart="true" />

    <at.markushi.ui.CircleButton
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:src="@drawable/ic_action"
        app:cb_color="#33CCFF"
        app:cb_pressedRingWidth="8dip"
        android:id="@+id/b2"
        android:layout_alignTop="@+id/b1"
        android:layout_centerHorizontal="true" />

    <at.markushi.ui.CircleButton
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:src="@drawable/ic_action"
        app:cb_color="#33CCFF"
        app:cb_pressedRingWidth="8dip"
        android:layout_alignTop="@+id/b2"
        android:layout_alignParentEnd="true"
        android:id="@+id/b3"
        android:layout_marginRight="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/bl1"
        android:id="@+id/bl1"
        android:layout_alignTop="@+id/bl2"
        android:layout_alignEnd="@+id/b1"
        android:layout_marginEnd="29dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/bl2"
        android:id="@+id/bl2"
        android:layout_below="@+id/b2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/bl3"
        android:id="@+id/bl3"
        android:layout_alignTop="@+id/bl2"
        android:layout_alignEnd="@+id/b3"
        android:layout_marginEnd="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/select"
        android:id="@+id/cyberplays"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:background="#33CCFF"
        android:textColor="#FFFFFF" />


</RelativeLayout>
