<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cyberplays.sobermonitor.SelectActivity"
    android:id="@+id/select_activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/hs1"
        android:text="@string/hs1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="36sp"
        android:gravity="center" />


    <at.markushi.ui.CircleButton
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:src="@drawable/ic_list"
        app:cb_color="#33CCFF"
        app:cb_pressedRingWidth="8dip"
        android:id="@+id/bs1"
        android:layout_above="@+id/bs2"
        android:layout_marginBottom="10dp"
        android:layout_alignParentEnd="true"/>


    <at.markushi.ui.CircleButton
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:src="@drawable/ic_dice"
        app:cb_color="#33CCFF"
        app:cb_pressedRingWidth="8dip"
        android:id="@+id/bs2"
        android:layout_above="@+id/bs3"
        android:layout_alignStart="@+id/bs1"
        android:layout_marginBottom="10dp" />

    <at.markushi.ui.CircleButton
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:src="@drawable/ic_excel_lg"
        app:cb_color="#33CCFF"
        app:cb_pressedRingWidth="8dip"
        android:id="@+id/bs3"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/bs2"
        android:layout_marginBottom="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/bt1"
        android:text="@string/bs1"
        android:layout_alignBottom="@+id/bs1"
        android:layout_alignStart="@+id/bt3"
        android:layout_marginBottom="34dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bs2"
        android:id="@+id/bt2"
        android:layout_alignBottom="@+id/bs2"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="33dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bs3"
        android:id="@+id/bt3"
        android:layout_marginBottom="32dp"
        android:layout_alignBottom="@+id/bs3"
        android:layout_toStartOf="@+id/bs3"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/coming_soon"
        android:id="@+id/textView"
        android:layout_marginEnd="18dp"
        android:textSize="10sp"
        android:layout_below="@+id/bt3"
        android:layout_alignEnd="@+id/bs3" />


</RelativeLayout>
