<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cyberplays.sobermonitor.SelectRandomActivity"
    android:id="@+id/select_random"
    android:background="@color/background_material_dark">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/number"
        android:text="@string/number"
        android:textSize="200sp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/range"
        android:id="@+id/range"
        android:background="#33CCFF"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:width="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/div" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/numbersel"
        android:id="@+id/numbersel"
        android:background="#33CCFF"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_alignTop="@+id/div"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/div" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="5dp"
        android:layout_height="60dp"
        android:id="@+id/div"
        android:background="#ffffffff"
        android:layout_alignTop="@+id/range"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
